--- a/app/src/main/res/layout/fragment_student_events.xml
+++ b/app/src/main/res/layout/fragment_student_events.xml
@@ -6,37 +6,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8ECEF"
-    tools:context=".Student.StudentMarksFragment">
+    tools:context=".Student.StudentEventFragment">
 
-    <!-- Title -->
-
-    <!-- Filter Buttons Container -->
-
-    <!-- Background Bar (Optional) -->
-
-    <!-- ListView -->
 
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/inknut_antiqua_light"
         android:text="Upcoming Events"
         android:textColor="#800000"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="32dp" />
+        app:layout_constraintBottom_toTopOf="@+id/lstBooks"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.342" />
 
     <ListView
         android:id="@+id/lstBooks"
         android:layout_width="376dp"
         android:layout_height="540dp"
+        android:layout_marginBottom="96dp"
         android:background="@drawable/search_background"
         android:divider="@android:color/transparent"
         android:dividerHeight="16dp"
         android:padding="8dp"
-        tools:layout_editor_absoluteX="19dp"
-        tools:layout_editor_absoluteY="107dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
