--- a/app/src/main/res/layout/fragment_student_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_student_leaderboard.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8ECEF"
-    tools:context=".Student.StudentMarksFragment">
+    tools:context=".Student.StudentLeaderboardFragment">
 
 
     <!-- Title -->
@@ -33,10 +33,11 @@
         android:id="@+id/imgLraderboard"
         android:layout_width="41dp"
         android:layout_height="38dp"
-        android:layout_marginStart="92dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="72dp"
         android:src="@drawable/leaderboard2"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="70dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
         android:id="@+id/spnSubject"
