--- a/app/src/main/res/layout/fragment_student_schedule.xml
+++ b/app/src/main/res/layout/fragment_student_schedule.xml
@@ -6,10 +6,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8ECEF"
-    tools:context=".Student.StudentMarksFragment">
+    tools:context=".Student.StudentScheduleFragment">
 
 
     <!-- Title -->
+
+
+    <ListView
+        android:id="@+id/listView2"
+        android:layout_width="338dp"
+        android:layout_height="459dp"
+        android:layout_marginBottom="12dp"
+        android:background="@drawable/search_background"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="16dp"
+        android:padding="8dp"
+
+        android:scrollbars="vertical"
+        android:textColor="#000"
+        app:layout_constraintBottom_toTopOf="@+id/txtRoomNumber"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.534"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txtRoomNumber"
+        android:layout_width="153dp"
+        android:layout_height="37dp"
+        android:layout_marginBottom="100dp"
+        android:allowUndo="false"
+        android:background="@drawable/search_background"
+        android:fontFamily="@font/inknut_antiqua_light"
+        android:includeFontPadding="false"
+        android:text="Your Room is 304"
+        android:textAlignment="center"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/spnSubject"
+        android:layout_width="335dp"
+        android:layout_height="41dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/search_background"
+        android:fontFamily="@font/inknut_antiqua"
+        android:hint="Select Subject"
+        android:padding="8dp"
+        android:spinnerMode="dropdown"
+        android:textColor="#000"
+        app:layout_constraintBottom_toTopOf="@+id/listView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.526"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
@@ -19,57 +71,12 @@
         android:textColor="#800000"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="69dp" />
-
-    <Spinner
-        android:id="@+id/spnSubject"
-        android:layout_width="335dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/search_background"
-        android:fontFamily="@font/inknut_antiqua"
-        android:hint="Select Subject"
-        android:padding="8dp"
-        android:spinnerMode="dropdown"
-        android:textColor="#000"
-        app:layout_constraintBottom_toTopOf="@id/txtTitle"
+        app:layout_constraintBottom_toTopOf="@+id/spnSubject"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtTitle"
-        app:layout_constraintVertical_bias="0.008" />
-
-
-    <ListView
-        android:layout_width="338dp"
-        android:layout_height="459dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/search_background"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="16dp"
-        android:padding="8dp"
-        android:scrollbars="vertical"
-        android:textColor="#000"
-
-        app:layout_constraintBottom_toTopOf="@id/spnSubject"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spnSubject"
-        app:layout_constraintVertical_bias="0.008" />
-
-    <TextView
-        android:id="@+id/txtRoomNumber"
-        android:layout_width="153dp"
-        android:layout_height="37dp"
-        android:allowUndo="false"
-        android:background="@drawable/search_background"
-        android:fontFamily="@font/inknut_antiqua_light"
-        android:includeFontPadding="false"
-        android:text="Your Room is 304"
-        android:textAlignment="center"
-        tools:layout_editor_absoluteX="138dp"
-        tools:layout_editor_absoluteY="656dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.738" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
