--- a/app/src/main/res/layout/activity_registrar_main.xml
+++ b/app/src/main/res/layout/activity_registrar_main.xml
@@ -2,36 +2,113 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/registrarCoordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivity">
+    android:fitsSystemWindows="true">
 
-    <FrameLayout
-        android:id="@+id/frame_layout"
+    <!-- Drawer Layout -->
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/registrarDrawerLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
 
-    <com.google.android.material.bottomappbar.BottomAppBar
-        android:id="@+id/bottomAppBar"
+        <!-- Main content with toolbar and fragment -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:fitsSystemWindows="true">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/registrarToolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="#990100"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                android:elevation="4dp"
+                android:paddingStart="0dp"
+                android:paddingEnd="0dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp">
+
+                    <!-- Placeholder for hamburger icon -->
+                    <View
+                        android:layout_width="48dp"
+                        android:layout_height="match_parent" />
+
+                    <!-- App Name Text (centered with weight) -->
+
+                    <!-- Divider -->
+                    <TextView
+                        android:id="@+id/appTitle"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="serif"
+                        android:lineSpacingExtra="2dp"
+                        android:text="School\nHub"
+                        android:textAlignment="textEnd"
+                        android:textAllCaps="true"
+                        android:textColor="@color/dark_gray"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="40dp"
+                        android:layout_marginHorizontal="8dp"
+                        android:background="@android:color/white" />
+
+                    <!-- Logo -->
+                    <ImageView
+                        android:id="@+id/appLogo"
+                        android:layout_width="55dp"
+                        android:layout_height="42dp"
+                        android:contentDescription="App Logo"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/logo2" />
+                </LinearLayout>
+            </androidx.appcompat.widget.Toolbar>
+
+
+            <!-- Fragment container -->
+            <FrameLayout
+                android:id="@+id/registrarFragmentContainer"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <!-- Navigation Drawer -->
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/registrarNavView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header"
+            app:menu="@menu/nav_drawer_student_menu" />
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+    <!-- Bottom Navigation -->
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/registrarBottomNav"
         android:layout_width="match_parent"
-
-
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/white"
-        app:fabCradleMargin="10dp"
-        app:fabCradleRoundedCornerRadius="50dp">
+        app:menu="@menu/bottom_registrar_menu"
+        app:itemIconTint="@color/dark_red"
+        app:itemTextColor="@color/dark_red"
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
-            android:background="@android:color/transparent"
-            app:labelVisibilityMode="labeled"
-            app:menu="@menu/bottom_registrar_menu" />
-    </com.google.android.material.bottomappbar.BottomAppBar>
-
+        android:background="?android:attr/windowBackground"
+        app:labelVisibilityMode="labeled"
+        android:fitsSystemWindows="true"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
