--- a/app/src/main/res/layout/fragment_registrar_add.xml
+++ b/app/src/main/res/layout/fragment_registrar_add.xml
@@ -11,8 +11,10 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="261dp"
         android:text="Add"
         android:textSize="40sp"
-        tools:layout_editor_absoluteX="174dp"
-        tools:layout_editor_absoluteY="261dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
