--- a/app/src/main/res/menu/nav_drawer_teacher_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_teacher_menu.xml
@@ -20,7 +20,7 @@
         <item
             android:id="@+id/teacher_nav_attendance"
             android:icon="@drawable/attendance_s"
-            android:title="View Attendance" />
+            android:title="Take Attendance" />
         <item
             android:id="@+id/teacher_nav_calender"
             android:icon="@drawable/calendar_s"
