--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -18,7 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Android Knowledge"
+        android:text="Anas Al Sayed"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:layout_marginTop="10dp"/>
@@ -26,7 +26,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="contact@androidknowledge.com"
+        android:text="anasalsayed14@gmail.com"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:layout_marginTop="5dp"
