End of the front 11:51 pm 5/12/2025

--- a/app/src/main/res/layout/fragment_teacher_view_submissions.xml
+++ b/app/src/main/res/layout/fragment_teacher_view_submissions.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#EBEFF2"
     android:padding="16dp"
-    tools:context=".Teacher.TeacherViewSubmissions">
+    tools:context=".Teacher.TeacherViewSubmissionsFragment">
 
     <TextView
         android:id="@+id/tvTitle"
