--- a/app/src/main/res/layout/fragment_teacher_notification.xml
+++ b/app/src/main/res/layout/fragment_teacher_notification.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8ECEF"
-    tools:context=".Student.StudentNotificationFragment">
+    tools:context=".Teacher.TeacherNotificationFragment">
 
     <!-- Title -->
     <TextView
