--- a/app/src/main/res/layout/fragment_teacher_settings.xml
+++ b/app/src/main/res/layout/fragment_teacher_settings.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E8ECEF"
-    tools:context=".Student.StudentSettingsFragment">
+    tools:context=".Teacher.TeacherSettingsFragment">
 
     <!-- Settings Icon -->
 
@@ -88,10 +88,10 @@
                     android:paddingStart="12dp">
 
                     <TextView
-                        android:id="@+id/tvStudentName"
+                        android:id="@+id/tvTeacherName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Student Name"
+                        android:text="Teacher Name"
                         android:textColor="#000"
                         android:textSize="18sp"
                         android:textStyle="bold" />
