--- a/app/src/main/res/layout/fragment_teacher_view_submissions.xml
+++ b/app/src/main/res/layout/fragment_teacher_view_submissions.xml
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Spinner
-        android:id="@+id/spnDay"
+        android:id="@+id/spnClass"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="#DFDFDF"
