Student can scan QR!!!!!!!!!!!!!
also fix some bugs in send assignment
@_@

--- a/app/src/main/res/layout/fragment_student_attendance.xml
+++ b/app/src/main/res/layout/fragment_student_attendance.xml
@@ -113,13 +113,13 @@
         android:id="@+id/txtSubTitle2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/inknut_antiqua_light"
         android:padding="10dp"
-        android:text="Add Attendance"
+        android:text="Scan for Attendance"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/divider" />
 
